SOAPClientEngine: fix deprecation, misc